chore: add bun-types

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "adventofcode",
+  "type": "module",
   "devDependencies": {
-    "@types/node": "^18.11.10"
+    "bun-types": "^0.3.0"
   }
 }
